--- a/country-page.css
+++ b/country-page.css
@@ -655,7 +655,7 @@
   
  .country-page .process-item {
     width: 100%;
-    max-width: 320px;
+/*     max-width: 320px; */
     margin: 20px auto;
   }
   
@@ -756,4 +756,98 @@ transform: rotate(180deg);
 .country-page .accordion-button span {
  flex:1;
 }
+
+
+
+
+
+
+.specialty-section {
+  padding: 10px;
+  background-color: #f9f9f9;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.specialty-section .container {
+  max-width: 1200px;
+  margin: auto;
+}
+
+.specialty-heading {
+  font-size: 28px;
+  margin-bottom: 15px;
+  text-align: center;
+  color: #2a2a2a;
+}
+
+.specialty-overview {
+  font-size: 16px;
+  margin-bottom: 30px;
+  text-align: center;
+  color: #555;
+  line-height: 1.6;
+}
+
+.specialty-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+}
+
+.specialty-item {
+  background: white;
+  padding: 15px;
+  border-radius: 8px;
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow);
+  text-align: left;
+  border-bottom: 3px solid var(--secondary-color);
+  
+}
+
+.specialty-item img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+}
+
+.specialty-item h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: var(--primary-color);
+
+}
+
+.specialty-item p {
+  font-size: 1rem;
+  color: #333;
+  line-height: 1.6;
+}
+
+/* Desktop layout (≥ 992px) */
+@media (min-width: 992px) {
+  .specialty-grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .specialty-heading {
+    font-size: 32px;
+  }
+
+  .specialty-overview {
+    font-size: 18px;
+  }
+
+  .specialty-item h3 {
+    font-size: 18px;
+  }
+
+  .specialty-item p {
+    font-size: 14px;
+  }
+  .specialty-item img {
+        max-width: 250px;
+    }
+}
+
 
