--- a/country-page.css
+++ b/country-page.css
@@ -162,7 +162,7 @@
 .country-page .icon {
   width: 1.25rem;
   height: 1.25rem;
-  color: var(--secondary-color)
+  color: var(--secondary-color);
   flex-shrink: 0;
 }
 
