--- a/country-page.css
+++ b/country-page.css
@@ -127,6 +127,9 @@
   font-size: 1.25rem;
   font-weight: 600;
   line-height: 1.4;
+  white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .country-page .card-title-with-icon {
