--- a/country-page.css
+++ b/country-page.css
@@ -697,7 +697,7 @@
 
 :root {
   --primary-color: #1f649d;
-  --secondary-color: #ff440a;
+  --secondary-color: #e81f25;
   --light-bg: #f8f9fa;
   --dark-text: #333333;
   --light-text: #666666;
