--- a/a-to-b.css
+++ b/a-to-b.css
@@ -1,4 +1,8 @@
-        /* ===== VARIABLES ===== */
+
+.elementor-section.elementor-section-boxed>.elementor-container {
+    max-width: 19000px;
+}
+/* ===== VARIABLES ===== */
         :root {
             /* Colors */
             --primary: #1f649d;
