--- a/a-to-b.css
+++ b/a-to-b.css
@@ -634,6 +634,7 @@
             padding: 10px;
             border-left: 5px solid #0f4e8d;
             position: relative;
+             max-width: 10000px !important;
         }
 
        .a-to-b-main .port-container legend {
