--- a/a-to-b.css
+++ b/a-to-b.css
@@ -1202,7 +1202,7 @@
 
      .a-to-b-main .shipping-pk-ru .text-content {
         left: -5%;
-        padding: 20px;
+        padding: 0;
       }
     }
 
@@ -1227,8 +1227,8 @@
      .a-to-b-main .shipping-pk-ru .text-section {
         flex: none;
         width: 100%;
-        padding: 15px;
-        justify-content: center;
+        padding: 0;
+        justify-content: left;
       }
 
      .a-to-b-main .shipping-pk-ru .text-content {
