--- a/a-to-b.css
+++ b/a-to-b.css
@@ -1236,7 +1236,7 @@
         max-width: 100%;
         background-color: #fff;
         box-shadow: none;
-        text-align: center;
+        text-align: left;
       }
 
      .a-to-b-main .shipping-pk-ru .section-title {
@@ -1249,7 +1249,6 @@
 
      .a-to-b-main .shipping-pk-ru .buttons {
         display: flex;
-        justify-content: center;
         flex-wrap: wrap;
       }
 
