--- a/a-to-b.css
+++ b/a-to-b.css
@@ -748,7 +748,7 @@
         /* Highlight Box */
        .a-to-b-main .highlight {
             background-color: #fff;
-            padding: 30px;
+            padding: 0;
             margin: 20px 0;
             box-shadow: var(--shadow-md);
             position: relative;
