--- a/a-to-b.css
+++ b/a-to-b.css
@@ -1288,4 +1288,8 @@ section.shipping-pk-ru.section.hero-section {
 .section-header1.mb-0 {
     margin-top: 35px;
 }
+
+.a-to-b-main .factor-list {
+    padding: 0;
+}
     
