--- a/a-to-b.css
+++ b/a-to-b.css
@@ -1258,6 +1258,9 @@
                 .a-to-b-main .cost-factors {
                  padding: 10px !important;
         }
+          .a-to-b-main .unordered-list {
+    padding-left: 0px !important;
+}
     }
 
        .elementor-section.elementor-section-boxed>.elementor-container {
