--- a/a-to-b.css
+++ b/a-to-b.css
@@ -25,7 +25,7 @@
             /* Spacing */
             --space-xs: 0.5rem;
             --space-sm: 1rem;
-            --space-md: 1.5rem;
+            --spacing-md: 1.2rem
             --space-lg: 2rem;
             --space-xl: 3rem;
             
