--- a/a-to-b.css
+++ b/a-to-b.css
@@ -216,6 +216,7 @@ color:var(--secondary)
             font-size: 1.25rem;
             font-weight: 600;
             line-height: 1.4;
+             margin:0 !important;
         }
 
        .a-to-b-main .card-title-with-icon {
