--- a/a-to-b.css
+++ b/a-to-b.css
@@ -406,6 +406,7 @@ color:var(--secondary)
             max-height: 0;
             overflow: hidden;
             transition: max-height 0.2s ease, padding 0.2s ease;
+                 display: block !important;
         }
 
        .a-to-b-main .accordion-item.active .accordion-content {
