--- a/country-page.css
+++ b/country-page.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #1f649d;
+  --primary-color: #0d4e8b;
   --primary-light: rgba(0, 102, 204, 0.1);
   --primary-border: rgba(0, 102, 204, 0.2);
   --text-color: #333333;
