--- a/country-page.css
+++ b/country-page.css
@@ -697,7 +697,7 @@
 
 :root {
   --primary-color: #0d4e8b;
-  --secondary-color: #e81f25;
+  --secondary-color: #ed1d26;
   --light-bg: #f8f9fa;
   --dark-text: #333333;
   --light-text: #666666;
