--- a/country-page.css
+++ b/country-page.css
@@ -66,7 +66,7 @@
 
 .country-page .section-subtitle {
   font-size: 1.25rem;
-  color: ed1d26;
+  color: #ed1d26;
   margin-bottom: var(--spacing-md);
   line-height: 1.5;
 }
