--- a/a-to-b.css
+++ b/a-to-b.css
@@ -866,7 +866,7 @@ color:var(--secondary)
             }
 
               #services .a-to-b-main .card-grid {
-   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)) !important;
 }
             
            .a-to-b-main .destinations-grid {
