--- a/country-page.css
+++ b/country-page.css
@@ -1031,6 +1031,9 @@ i.fas.fa-phone.fa-fw {
     font-size: 16px;
     padding: 20px;
 }
+.destination-item a {
+    color: black !important;
+}
 
 
 
